Update with g8Test and no scripted